refactor: separation of concerns
